server: exposing DNSRequest, source formatting, improving docs.
